--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@actions/github": "^2.1.1"
+    "@actions/github": "^2.1.1",
+    "@octokit/graphql-schema": "^10.17.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
